Fixed alignment issues with massage boxes in the chat page

--- a/styles/chatStyle.css
+++ b/styles/chatStyle.css
@@ -38,10 +38,12 @@ body{
 }
 .client-m{
     float: left;
+    left: 1.5%;
 }
 
 .user-m{
     float: right;
+    right: 1.5%;
 }
 .button{
     background-color: Transparent;
